css/style.css
:root {
    --menu-bg-color: rgb(72, 182, 72);
    --menu-bg-color-pressed: rgb(64, 158, 64);
    --menu-text-color: rgb(255, 255, 255);
    --menu-text-color-selected: rgb(220, 220, 220);
    --menu-bottom-bg-color: rgb(77, 126, 190);
    --button-bg: rgb(77, 126, 190);
    --button-bg-hover: rgb(69, 114, 173);
    --button-bg-pressed: rgb(57, 94, 141);
    --app-menu: rgb(231, 231, 231);
    --app-menu-border: rgb(196, 196, 196);
    --trash-btn: rgb(230, 5, 5);
    --trash-btn-hover: rgb(216, 0, 0);
    --trash-btn-pressed: rgb(190, 0, 0);
}

html {
    height: 100%;
}

body {
    margin: 0px;
    font-family: "Noto Sans";
    height: 100%;
    overflow-y: hidden;
}

header {
    color: var(--menu-text-color);
}

.header-top {
    background-color: var(--menu-bg-color);
    padding: 10px;
}

.header-top > h1, .header-bottom > p {
    margin: 0px;
}

.header-bottom {
    background-color: var(--menu-bottom-bg-color);
    padding: 6px;
}

main {
    display: flex;
    height: 100%;
}

aside {
    background-color: var(--menu-bg-color);
    padding: 20px;
    height: 100%;
    color: var(--menu-text-color);
    width: 230px;
}

h2 {
    margin-top: 0px;
}

li {
    color: var(--menu-text-color);
    margin-bottom: 10px;
}

a {
    color: var(--menu-text-color);
    text-decoration-color: var(--menu-text-color);
    font-weight: bold;
}

a:hover {
    color: var(--menu-text-color-selected);
}

#main-section {
    width: 100%;
    padding-top: 10px;
    padding-left: 10px;

    display: flex;
    flex-direction: column;
    align-items: center;
}

#responsive-btn {
    height: 40px;
    width: 40px;
    background-color: var(--menu-bg-color);
    border-style: none;
    color: var(--menu-text-color);
    font-size: 24px;
    border-top-right-radius: 30%;
    border-bottom-right-radius: 30%;
    position: absolute;
    left: 99.5%;
    top: 0%;
}

#responsive-btn:active {
    background-color: var(--menu-bg-color-pressed);
}

form {
    display: flex;
    flex-direction: column;
}

form > input {
    margin-bottom: 20px;
}

.menu-app {
    background-color: var(--app-menu);
    border-color: var(--app-menu-border);
    border-width: 3px;
    border-style: solid;
    border-radius: 15px;
    padding: 15px;
    width: max-content;
}

section button {
    background-color: var(--button-bg);
    border-width: 0px;
    padding: 7px;
    color: var(--menu-text-color);
    font-weight: bold;
    font-size:large;
    border-radius: 15px;
}

section button:hover {
    background-color: var(--button-bg-hover);
    color: var(--menu-text-color-selected);
}

section button:active {
    background-color: var(--button-bg-pressed);
    color: var(--menu-text-color-selected);
}

#category-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 30px;
}

#category-container > section > div {
    margin: 10px;
    padding: 10px;
}

.category {
    display: flex;
    gap: 10px;
    align-items: center;
}

.category > button {
    background-color: var(--trash-btn);
    width: 40px;
    height: 40px;
    font-weight: bolder;
    border-color: black;
    border-width: 1.5px;
    border-style: solid;
}

.category > button:hover {
    background-color: var(--trash-btn-hover);
}

.category > button:active {
    background-color: var(--trash-btn-pressed);
}

svg {
    width: 20px;
    height: 25px;
}

#load-error {
    display: none;
    color: #F00F;
}

#load-error.show-error {
    display: block;
}

textarea {
    resize: none;
    margin-bottom: 20px;
    width: 400px;
    height: 70px;
}

select {
    margin-bottom: 20px;
}

.menu-app > h2 {
    justify-self: center;
}

@media(max-width: 600px) {
    aside {
        position: fixed;
        transition: all 0.3s cubic-bezier(0, 0, 0, 1);
        right: 100%;
    }

    aside.moved {
        right: calc(100% - 270px);
    }

    #main-section {
        padding-left: 40px;
        padding-top: 20px;
    }

    textarea {
        width: 70vw;
    }
}

@media(min-width: 601px) {
    #responsive-btn {
        display: none;
    }
}

@media(min-width: 750px) {
    #category-list {
        display: flex;
    }
}

